fix style issue on mobile

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -8,6 +8,7 @@ $gap-between-sidebar-and-body : 120px;
   height: 100%;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 
   &__header {
     width: 100%;
